# modelagem-membranas

./: .gitignore  CMakeLists.txt  CalculadoraCuboPerfeitoDadosSaida.cpp  CalculadoraCuboPerfeitoDadosSaida.h  CalculadoraDadosSaida.cpp  README.md
Codigo/: CMakeLists.txt  main.cpp
Codigo/AnaliseGrafica/: analise.py  dados.csv  distancia_fibras.py  distancia_fibras_cilindro.py  gerais.cpp  gerais.h  teste.py
Codigo/Calculadora/: CalculadoraCuboPerfeitoDadosSaida.cpp  CalculadoraCuboPerfeitoDadosSaida.h  CalculadoraDadosSaida.cpp  CalculadoraDadosSaida.h
Codigo/Entrada/: DadosEntradaModelo.cpp  DadosEntradaModelo.h
Codigo/Gerador/: GeradorDadosSaida.cpp  GeradorDadosSaida.h
Codigo/Gerais/: gerais.cpp  gerais.h
Codigo/Modelos/: CalculadoraCuboPerfeitoDadosSaida.cpp  CalculadoraCuboPerfeitoDadosSaida.h  CalculadoraDadosSaida.cpp  CalculadoraDadosSaida.h
Codigo/Saida/: DadosSaidaModelo.cpp  DadosSaidaModelo.h
Codigo/VolumeControle/: CuboPerfeito.cpp  CuboPerfeito.h  FibraBase.cpp  FibraBase.h  FibraCilindrica.cpp  FibraCilindrica.h  GeometriaBase.cpp  GeometriaBase.h  VolumeControle.cpp  VolumeControle.h
Codigo/VolumeControle/Distribuicoes/: DistribuicaoBase.cpp  DistribuicaoBase.h  DistribuicaoUniforme.cpp  DistribuicaoUniforme.h  DistribuicaoUniformeAlternada.cpp  DistribuicaoUniformeAlternada.h  DistribuicaoUniformeEstruturada.cpp  DistribuicaoUniformeEstruturada.h
Codigo/VolumeControle/Fibras/: FibraBase.cpp  FibraBase.h  FibraCilindrica.cpp  FibraCilindrica.h
Codigo/VolumeControle/Geometrias/: CuboPerfeito.cpp  CuboPerfeito.h  GeometriaBase.cpp  GeometriaBase.h
Docs/: Doxyfile  DoxygenWarningLog.txt
Docs/UMLS/: UML.drawio  UML.mdj
Docs/html/: _calculadora_cubo_perfeito_dados_saida_8cpp.html  _calculadora_cubo_perfeito_dados_saida_8h.html  _calculadora_cubo_perfeito_dados_saida_8h_source.html  _calculadora_dados_saida_8cpp.html  _calculadora_dados_saida_8h.html  _calculadora_dados_saida_8h_source.html  _cubo_perfeito_8cpp.html  _cubo_perfeito_8h.html  _cubo_perfeito_8h_source.html  _dados_entrada_modelo_8cpp.html  _dados_entrada_modelo_8h.html  _dados_entrada_modelo_8h_source.html  _dados_saida_modelo_8cpp.html  _dados_saida_modelo_8h.html  _dados_saida_modelo_8h_source.html  _distribuicao_base_8h_source.html  _distribuicao_uniforme_8h_source.html  _fibra_base_8h_source.html  _fibra_cilindrica_8h_source.html  _geometria_base_8h.html  _geometria_base_8h_source.html  _gerador_dados_saida_8cpp.html  _gerador_dados_saida_8h.html  _gerador_dados_saida_8h_source.html  _volume_controle_8cpp.html  _volume_controle_8h.html  _volume_controle_8h_source.html  annotated.html  class_calculadora_cubo_perfeito_dados_saida-members.html  class_calculadora_cubo_perfeito_dados_saida.html  class_calculadora_dados_saida-members.html  class_calculadora_dados_saida.html  class_cubo_perfeito-members.html  class_cubo_perfeito.html  class_dados_entrada_modelo-members.html  class_dados_entrada_modelo.html  class_dados_saida_modelo-members.html  class_dados_saida_modelo.html  class_distribuicao_base.html  class_distribuicao_uniforme-members.html  (+54 more)
Docs/latex/: _calculadora_cubo_perfeito_dados_saida_8cpp.tex  _calculadora_cubo_perfeito_dados_saida_8h.tex  _calculadora_cubo_perfeito_dados_saida_8h_source.tex  _calculadora_dados_saida_8cpp.tex  _calculadora_dados_saida_8h.tex  _calculadora_dados_saida_8h_source.tex  _cubo_perfeito_8cpp.tex  _cubo_perfeito_8h.tex  _cubo_perfeito_8h_source.tex  _dados_entrada_modelo_8cpp.tex  _dados_entrada_modelo_8h.tex  _dados_entrada_modelo_8h_source.tex  _dados_saida_modelo_8cpp.tex  _dados_saida_modelo_8h.tex  _dados_saida_modelo_8h_source.tex  _distribuicao_base_8h_source.tex  (+39 more)
Entrada/: DadosEntradaModelo.cpp
Saida/: DadosSaidaModelo.cpp
Testes/: CMakeLists.txt  teste.py  testes.cpp
UML/: UML.mdj
(+69 files in other folders)
